<resources>
    <string name="app_name">homework05</string>
    <string name="textTextView">0</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply">*</string>
    <string name="point">.</string>
    <string name="result">=</string>
    <string name="divide">/</string>
    <string name="clear">C</string>
    <string name="errorString">Cannot be divided by zero</string>
    <string name="imgDescription">img</string>
    <string name="myTheme">My Theme</string>
    <string name="themeSelect">Theme select</string>
    <string name="lightTheme">Light Theme</string>
    <string name="darkTheme">Dark Theme</string>
    <string name="applyButtonText">Apply</string>
    <string name="settingsButtonText">Settings</string>
</resources>