<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imgDescription"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/keyboard" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="#FFFFFF"
        android:gravity="end"
        android:text="@string/textTextView"
<<<<<<< HEAD
        android:textSize="36sp"
=======
        android:textSize="@dimen/textSize"
>>>>>>> master
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/_1"
        android:textSize="36sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:text="@string/_2"
        android:textSize="36sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:text="@string/_3"
<<<<<<< HEAD
        android:textSize="36sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonPlus"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:text="@string/plus"
        android:textSize="36sp"
        app:cornerRadius="10dp"
=======
        android:textSize="@dimen/textSize"
        app:cornerRadius="@dimen/buttonCornerRadius"
        app:layout_constraintEnd_toStartOf="@+id/button_plus"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_plus"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:layout_marginTop="@dimen/buttonMarginTop"
        android:layout_marginEnd="@dimen/buttonMarginSide"
        android:text="@string/plus"
        android:textSize="@dimen/textSize"
        app:cornerRadius="@dimen/buttonCornerRadius"
>>>>>>> master
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:text="@string/_4"
        android:textSize="36sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/_5"
        android:textSize="36sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button6"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/_6"
<<<<<<< HEAD
        android:textSize="36sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonMinus"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="40dp"
        android:text="@string/minus"
        android:textSize="36sp"
        app:cornerRadius="10dp"
=======
        android:textSize="@dimen/textSize"
        app:cornerRadius="@dimen/buttonCornerRadius"
        app:layout_constraintEnd_toStartOf="@+id/button_minus"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_minus"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:layout_marginEnd="@dimen/buttonMarginSide"
        android:text="@string/minus"
        android:textSize="@dimen/textSize"
        app:cornerRadius="@dimen/buttonCornerRadius"
>>>>>>> master
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlus" />

    <Button
        android:id="@+id/button7"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:text="@string/_7"
        android:textSize="36sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button8"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/_8"
        android:textSize="36sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button9"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/_9"
<<<<<<< HEAD
        android:textSize="36sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonMultiply"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="40dp"
        android:text="@string/multiply"
        android:textSize="36sp"
        app:cornerRadius="10dp"
=======
        android:textSize="@dimen/textSize"
        app:cornerRadius="@dimen/buttonCornerRadius"
        app:layout_constraintEnd_toStartOf="@+id/button_multiply"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_multiply"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:layout_marginEnd="@dimen/buttonMarginSide"
        android:text="@string/multiply"
        android:textSize="@dimen/textSize"
        app:cornerRadius="@dimen/buttonCornerRadius"
>>>>>>> master
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/buttonMinus" />

    <Button
        android:id="@+id/button0"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:text="@string/_0"
<<<<<<< HEAD
        android:textSize="36sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonPoint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/buttonPoint"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/point"
        android:textSize="36sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonClear"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/clear"
        android:textSize="36sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonDivide"
        app:layout_constraintStart_toEndOf="@+id/buttonPoint"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="40dp"
        android:text="@string/divide"
        android:textSize="36sp"
        app:cornerRadius="10dp"
=======
        android:textSize="@dimen/textSize"
        app:cornerRadius="@dimen/buttonCornerRadius"
        app:layout_constraintEnd_toStartOf="@+id/button_point"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_point"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:text="@string/point"
        android:textSize="@dimen/textSize"
        app:cornerRadius="@dimen/buttonCornerRadius"
        app:layout_constraintEnd_toStartOf="@+id/button_clear"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_clear"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:text="@string/clear"
        android:textSize="@dimen/textSize"
        app:cornerRadius="@dimen/buttonCornerRadius"
        app:layout_constraintEnd_toStartOf="@+id/button_divide"
        app:layout_constraintStart_toEndOf="@+id/button_point"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_divide"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:layout_marginEnd="@dimen/buttonMarginSide"
        android:text="@string/divide"
        android:textSize="@dimen/textSize"
        app:cornerRadius="@dimen/buttonCornerRadius"
>>>>>>> master
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonClear"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiply" />

<<<<<<< HEAD
    <Button
        android:id="@+id/buttonResult"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/result"
        android:textSize="36sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/buttonDivide"
        app:layout_constraintStart_toStartOf="@+id/buttonDivide"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivide" />
=======
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_result"
        android:layout_width="@dimen/buttonSize"
        android:layout_height="@dimen/buttonSize"
        android:text="@string/result"
        android:textSize="@dimen/textSize"
        app:cornerRadius="@dimen/buttonCornerRadius"
        app:layout_constraintEnd_toEndOf="@+id/button_divide"
        app:layout_constraintStart_toStartOf="@+id/button_divide"
        app:layout_constraintTop_toBottomOf="@+id/button_divide" />
>>>>>>> master

</androidx.constraintlayout.widget.ConstraintLayout>